Enabled CORS in Module4 BackEnd

--- a/Module4.Client.HtmlJs/wwwroot/products.html
+++ b/Module4.Client.HtmlJs/wwwroot/products.html
@@ -12,7 +12,7 @@
 
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
     <script>
-        var uri = 'https://localhost:44306/api/product';
+        var uri = 'http://localhost:5000/api/product';
 
         $(document).ready(function () {
             $.getJSON(uri)
