Finished Module4.Task2

--- a/Module4.Client.HtmlJs/wwwroot/products.html
+++ b/Module4.Client.HtmlJs/wwwroot/products.html
@@ -24,7 +24,7 @@
         });
 
         function formatItem(item) {
-            return item.Name + ': $' + item.Price;
+            return `Name: ${item.productName}, Price: ${item.unitPrice}$`;
         }
     </script>
 </body>
