--- a/Module4.Client.HtmlJs/wwwroot/categories.html
+++ b/Module4.Client.HtmlJs/wwwroot/categories.html
@@ -24,7 +24,7 @@
         });
 
         function formatItem(item) {
-            return item.Name + ': $' + item.Price;
+            return `Name: ${item.categoryName}, Desc: ${item.description}`;
         }
     </script>
 </body>
